Fixed Phantom Scrollbar

--- a/simulator.css
+++ b/simulator.css
@@ -64,9 +64,9 @@
     padding: 30px 0;
 }
 
-#settings-nav {
+/*#settings-nav {
     overflow-y: scroll;
-}
+}*/
 
 .nav-pills .nav-link {
     border-radius: 0px;
